Remove gradients and emojis, add favicon and Open Graph meta tags

--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peep the Arcade</title>
+    <meta name="description" content="Browse and play games from platanus-hack-25-arcade forks">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Peep the Arcade">
+    <meta property="og:description" content="Browse and play games from platanus-hack-25-arcade forks">
+    <meta property="og:url" content="https://v4rgas.github.io/peep-the-arcade/">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Peep the Arcade">
+    <meta name="twitter:description" content="Browse and play games from platanus-hack-25-arcade forks">
+
+    <!-- Favicon -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👾</text></svg>">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>🕹️ Peep the Arcade</h1>
+        <h1>Peep the Arcade</h1>
         <p class="subtitle">Test games from platanus-hack-25-arcade forks</p>
 
         <div id="loading" class="loading">Loading forks...</div>
@@ -19,7 +35,7 @@
         <div id="game-container" class="game-container" style="display: none;">
             <div class="game-header">
                 <h2 id="current-game-title"></h2>
-                <button id="close-game" class="btn-close">✕ Close</button>
+                <button id="close-game" class="btn-close">× Close</button>
             </div>
             <iframe id="game-iframe" sandbox="allow-scripts"></iframe>
         </div>
