Fix iframe sandbox - add allow-same-origin for fetch to work

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h2 id="current-game-title"></h2>
                 <button id="close-game" class="btn-close">× Close</button>
             </div>
-            <iframe id="game-iframe" sandbox="allow-scripts"></iframe>
+            <iframe id="game-iframe" sandbox="allow-scripts allow-same-origin"></iframe>
         </div>
     </div>
 
