Add footer with credits and contribute link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 
         <div id="forks-list" class="forks-list"></div>
 
+        <footer class="footer">
+            <p class="made-with-love">Made with ❤️ by <a href="https://github.com/v4rgas" target="_blank">v4rgas</a></p>
+            <p class="contribute">Want to contribute? <a href="https://github.com/v4rgas/peek-the-arcade" target="_blank">Check out the repo →</a></p>
+        </footer>
+
         <div id="game-container" class="game-container" style="display: none;">
             <div class="game-header">
                 <h2 id="current-game-title"></h2>
