Add filter checkbox for forks with new commits (pushed_at heuristic)

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             <button id="save-token" class="btn-save">Save</button>
         </div>
 
+        <div class="filter-section">
+            <label class="filter-checkbox">
+                <input type="checkbox" id="filter-modified" checked>
+                <span>Show only forks with new commits</span>
+            </label>
+        </div>
+
         <div id="loading" class="loading">Loading forks...</div>
         <div id="error" class="error" style="display: none;"></div>
 
